# tw-kyb

./: README.md
firebase/: docker-compose.yml
firebase/front/: .eslintrc.json  tailwind.config.js
icp/: Dockerfile  docker-compose.yml
icp/.devcontainer/: devcontainer.json
icp/signature/: Cargo.lock.bak  Cargo.toml  README.md  build.sh  canisterIds.js  canister_ids.json  dev.pem  dfx.json  dfx.json.bac  package-lock.json  package.json  webpack.config.js
icp/signature/src/signature_backend/: Cargo.lock.bak  Cargo.toml  signature_backend.did
icp/signature/src/signature_backend/src/: api.rs  b64.rs  constants.rs  error.rs  fetch.rs  fetch_keys.rs  firebase_auth.rs  http_request.rs  http_utils.rs  ic_api.rs  ic_types.rs  id_token.rs  id_token_verifier.rs  jwk_keys.rs  jwk_keys_store.rs  jwt.rs  keys_fetch.rs  lib.rs  lib.rs.bak  lib.rs.bak2  lib.rs.real  max_age.rs  now.rs  rsa.rs  serde_json_utils.rs  structs.rs  validator.rs
icp/signature/src/signature_backend/src/api/: public_key.rs  sign.rs
icp/signature/src/signature_backend/src/declarations/signature_backend/: index.d.ts  index.js  signature_backend.did  signature_backend.did.d.ts  signature_backend.did.js
icp/signature/src/signature_backend/src/declarations/signature_frontend/: index.d.ts  index.js
issuer/: .gitignore  Dockerfile  README.md  docker-compose.yml
issuer/.devcontainer/: devcontainer.json
issuer/resources/: appengine-web.xml  authlete.properties  pom.xml
issuer/shells/: deploy.sh  dev.sh  setup.sh
test/: .firebaserc  Dockerfile  firebase.json
test/.devcontainer/: devcontainer.json
test/extensions/: firebase-web-authn.env
test/front/: firebaseConfig.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
test/functions/: .eslintrc.js  package-lock.json  package.json
wallet/: .env.test  App.tsx  README.md  app.json  firebaseConfig.ts  globals.ts  metro.config.js  package-lock.json  package.json
wallet/auth-session/: authDetail.spec.ts  authDetail.ts  authRequest.spec.ts  authRequest.ts  authResponse.spec.ts  authResponse.ts  authSession.ts  (+21 more)
(+247 files in other folders)
