[package]
name = "signature_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[workspace]
resolver = "2"

[dependencies]
candid = "0.9"
ic-cdk = "0.11"
ic-cdk-macros = "0.8.0"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.1"
async-trait = "0.1.74"
futures = "0.3.29"

[dev-dependencies]
tokio = { version = "1.34", features = ["macros", "rt"] }
mockall = "0.11.4"
