[package]
name = "signature_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.1"
ic-cdk = {version = "0.12.0", features = ["transform-closure"]}
ic-cdk-macros = "0.8.0"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1.74"
futures = "0.3.29"
base64 = "0.21.5"
num-bigint = "0.4.4"
num-traits = "0.2.17"
hmac-sha256 = "1.1.7"
# sha256 = "1.4.0"

[dev-dependencies]
tokio = { version = "1.34", features = ["macros", "rt"] }
mockall = "0.12.1"
rsa = { version = "0.9.6", features = ["sha2"] }
rand = "0.8.5"
